 - Enter no longer needed to rename annotation
 - New numeric input for annotation's dimensions and position
 - Auto-select newly created annotation after dragging
 - Auto-select moving annotation when dragging begins
 - Clean up messages, layout on the annotation inspector
 - Repeat filter field no longer needs enter to apply, is now even saved automatically to disk
 - Port over on-screen annotation label handles
 - Show/hide toggle annotation labels setting on inspector
 - Show draft annotation (being moved, resized, being created or its values being modified numerically)
 - Preliminary work on seggregated output folder
 - Perliminary work on rollback feature for synthetics generation


Week 5

 - [80%] Separate output folder
 - [30%] Ability to cancel and REVERT synthetic generation
 - [PLANNED] Revisit cut-out behavior (current version should remove hit annotations when intersection occurs)
 
 
Week 6+ (Optional)

 - [PROPOSED] New "Must include" column in synthetics modal
 - [PLANNED] Real-time numeric feedback while creating annotation
 - [PLANNED] Numeric feedback while moving annotation
 - [PLANNED] On-screen annotation label handles
 - [PLANNED] Show/hide toggle annotation labels
 - [PLANNED] Disable save json button when just exported
 - [PLANNED] Back-up JSON auto-saved in workspace
 - [PLANNED] Revert to annotations.json (reload)


KNOWN ISSUES
------------

 - Pressing del, up/down performs the expected action but also sounds an alert
 - Image navigator does not automatically scroll while selecting items using keyboard
 - UI freezes briefly when too many images are about to be generated
 - Incompatible with previous version workspace (remove .visioannotate folder to work-around this issue)
 - [TBC] Sometimes empty PNGs are generated and reported not to be written to disk (when random extent bounds are zero)
 - [CONFIRMED] Sometimes the image inspector is active showing a file missing note instead of "no active/selected image"