@@ -1,0 +1,27 @@
+**Visio ML** is a Mac tool for annotating and augmenting image sets for use in object-detection machine-learning model training.
+
+# Requirements
+
+An Apple Mac computer running **macOS 10.15 or later**.
+
+# Running
+
+Open the project using _Xcode_ and hit _run_ (`Command+R`).
+
+# Usage
+
+ - Select a folder containing source images.
+ - Annotate each image by selecting it on the navigator and dragging areas over the preview.
+ - Augment your data set by appliying filters and generating annotated synthetic images.
+ - Export annotations as JSON file for use with [Create ML](https://developer.apple.com/machine-learning/create-ml/).
+ - Open folder on _Create ML_ to train your model.
+
+# Developing
+
+Using Xcode 11 or later.
+
+The project is written in Swift 5.2 using the SwiftUI and Combine frameworks.
+
+# Contributing
+
+Contact us if you're interested in contributing. Submit your PRs via GitHub for consideration.
